[gd_scene load_steps=2 format=2]

[ext_resource path="res://Script/MenuChat.gd" type="Script" id=1]

[node name="MenuChat" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 190.0
margin_top = 61.0
margin_right = 304.0
margin_bottom = 111.0
text = "Gamificacion"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 543.0
margin_top = 57.0
margin_right = 657.0
margin_bottom = 107.0
text = "Insignias"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_left = 200.0
margin_top = 304.0
margin_right = 314.0
margin_bottom = 354.0
text = "Micro"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="."]
margin_left = 560.0
margin_top = 304.0
margin_right = 674.0
margin_bottom = 354.0
text = "Stack Bio"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
